# JFMEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Assets/: resource_manifest.json  texture_config.txt
Engine/Assets/Shaders/: Animal.glsl  BasicCube.glsl  DebugCube.glsl  DebugTest.glsl  SimpleTest.glsl
Engine/Assets/Textures/: brick.tga
Engine/Include/JFMEngine/: JFMEngine.h  TextureLoader.h
Engine/Include/JFMEngine/Animation/: Animation.h
Engine/Include/JFMEngine/Audio/: AudioClip.h  AudioSystem.h
Engine/Include/JFMEngine/Core/: Application.h  Core.h  EntryPoint.h  EventSystem.h  Layer.h  LayerStack.h  LockFreeQueue.h  MemoryPool.h  Scene.h
Engine/Include/JFMEngine/ECS/: Component.h  ComponentPool.h  Components.h  ECS.h  Entity.h  System.h  World.h
Engine/Include/JFMEngine/ECS/Systems/: PhysicsSystem.h  RenderSystem.h  TransformSystem.h
Engine/Include/JFMEngine/Effects/: ParticleSystem.h
Engine/Include/JFMEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Include/JFMEngine/Input/: InputManager.h  KeyCodes.h
Engine/Include/JFMEngine/Physics/: AllPhysics.h  Physics.h  Physics3D.h  PhysicsComponents.h
Engine/Include/JFMEngine/Platform/: GLFWWindow.h  Window.h
Engine/Include/JFMEngine/Renderer/: Buffer.h  Camera.h  CameraController.h  GeometryGenerator.h  Light.h  LightingManager.h  LightingRenderer.h  Material.h  Mesh.h  Model.h  OpenGLBuffer.h  OpenGLDebug.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  PostProcessing.h  RenderCommand.h  Renderer.h  Renderer3D.h  RendererAPI.h  Shader.h  Shadow.h  Skybox.h  Texture.h  TextureConfig.h  Vertex.h  VertexArray.h
Engine/Include/JFMEngine/Resources/: ResourceLoaders.h  ResourceManager.h  ResourcePreloader.h
Engine/Include/JFMEngine/Scene/: Scene.h  Scene3D.h  SceneFactory.h
Engine/Include/JFMEngine/Terrain/: Terrain.h
Engine/Include/JFMEngine/Utils/: Log.h
Engine/Source/Animation/: Animation.cpp
Engine/Source/Audio/: AudioClip.cpp
Engine/Source/Core/: Application.cpp  EventSystem.cpp  Layer.cpp  LayerStack.cpp  MemoryPool.cpp
Engine/Source/ECS/: Component.cpp  ECS.cpp  System.cpp  World.cpp
Engine/Source/ECS/Systems/: RenderSystem.cpp  TransformSystem.cpp
Engine/Source/Physics/: Physics.cpp  PhysicsComponents.cpp
Engine/Source/Platform/: GLFWWindow.cpp
Engine/Source/Renderer/: Buffer.cpp  CameraController.cpp  GeometryGenerator.cpp  LightingManager.cpp  LightingRenderer.cpp  Material.cpp  Mesh.cpp  Model.cpp  OpenGLBuffer.cpp  OpenGLDebug.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  RenderCommand.cpp  Renderer.cpp  Renderer3D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  TextureConfig.cpp  VertexArray.cpp
Engine/Source/Resources/: ResourceExample.cpp  ResourceLoaders.cpp  ResourceManager.cpp  ResourcePreloader.cpp
Engine/Source/Scene/: Scene.cpp  SceneFactory.cpp
Engine/Source/Utils/: Log.cpp  TextureLoader.cpp
Examples/: CMakeLists.txt
Examples/CubeRenderDemo/: CMakeLists.txt  CubeRenderDemo.cpp
Examples/IntegratedRenderingDemo/: IntegratedRenderingDemo.cpp
Examples/ModelRenderDemo/: CMakeLists.txt  ModelRenderDemo.cpp
Examples/Renderdemo/: Renderdemo.cpp
Examples/Simple3DDemo/: CMakeLists.txt  Simple3DDemo.cpp
Tools/: TextureGenerator  TextureGenerator.cpp  grass.tga  wood.tga
res/model/: blackcat.fbx
